--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -10,6 +10,11 @@
 }
 
 /* shared style */
+
+.secondary-bg{
+    background-color: #FFF8F3;
+
+}
 .text-primary{
     color:#FD6E0A;
 }
@@ -27,6 +32,17 @@
     padding: 18px 35px;
     border-radius: 5px;
 
+}
+
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color:#181818;
+}
+
+.section-description{
+    font-size: 18px;
+    color:#757575;
 }
 
 /* Header styles */
@@ -91,4 +107,24 @@ nav li a{
 
 .banner-profile-pic{
     width: 580px;
+}
+/* Main styles */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+/* About Styles */
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    margin-top: 130px;
+}
+.about-items{
+    display: flex;
+    justify-content: space-around;
+}
+.item-description{
+    font-weight: 600;
 }
