--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -45,6 +45,10 @@
     color:#757575;
 }
 
+.text-center{
+    text-align: center;
+}
+
 /* Header styles */
 .header{
     background-image: url('../images/developer.png') , url('../images/header_bg.png');
@@ -114,12 +118,17 @@ main{
     margin: 0 auto;
 }
 
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+
 /* About Styles */
 .about{
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
-    margin-top: 130px;
+   
 }
 .about-items{
     display: flex;
@@ -127,4 +136,16 @@ main{
 }
 .item-description{
     font-weight: 600;
+}
+
+/* Skills section styles */
+.skills-container{
+    display: flex;
+    gap:24px;
+}
+
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
